Made email placeholder more accurate, fixed layout issue with error on submitting bad contact form.

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -128,6 +128,11 @@ form p.error:before {
 	text-align: center;
 }
 
+form.contactForm p.error:before {
+	width: 100%;
+	float: none;
+}
+
 form p.error.email:before {
 	content: "Please enter a valid University email.";
 }
